# semantic_judge

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  openapi.yaml  pyproject.toml  pytest.ini  setup.cfg
judge/: middleware.py  models.py  tests.py  urls.py  views.py
judge/migrations/: 0001_initial.py
judge/services/: judge.py  utils.py
nlpapi/: asgi.py  settings.py  urls.py  wsgi.py
